--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.QuadFlask:colorpicker:0.0.13'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
